--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-left">
-                    <h1>Participe já do vestibulinho! Clique em Saiba Mais.</h1>
+                    <h1>Participe já do vestibulinho!</h1>
                     <p class="hero-subtitle">Inscrições abertas até 3 de novembro de 2025!</p>
                     <p class="hero-description">"O principal objetivo da educação é criar pessoas capazes de fazer
-                        coisas novas e não simplesmente repetir o que outras gerações fizeram."</p>
-                    <a href="https://etecabh.cps.sp.gov.br/" target="_blank"><button class="cta-button">Saiba Mais</button></a>
+                        coisas novas e não simplesmente repetir o que outras gerações fizeram." - Jean Piaget</p>
+                    <a href="https://vestibulinho.etec.sp.gov.br/home/" target="_blank"><button class="cta-button">Faça sua inscrição</button></a>
                 </div>
                 <div class="hero-right">
                     <div class="logo-container">
@@ -151,8 +151,9 @@
         </div>
     </section>
 
-    <section class="professor-section">
+    <section class="professor-section"> 
         <div class="container">
+            
             <div class="professor-slider">
                 <div class="professor-slides">
                     <div class="professor-slide active">
@@ -176,7 +177,7 @@
                             </div>
                             <div class="professor-info">
                                 <div class="professor-card">
-                                    <h3>Professora Beth</h3>
+                                    <h3>Professora Bete</h3>
                                     <p class="professor-title">Professora e Coordenadora de Marketing</p>
                                     <p class="professor-description">Formada em Propaganda e Marketing, com pós graduação em Comunicação Publicitária e com um vasto conhecimento no 
                                         mercado de comunicação.
@@ -247,7 +248,7 @@
                     <div class="footer-column">
                         <h4>FAQ</h4>
                         <ul>
-                           <a href="https://vestibulinho.etec.sp.gov.br/duvidas-frequentes/"><li>DÚVIDAS MAIS FREQUENTES</li></a>
+                           <a href="https://vestibulinho.etec.sp.gov.br/duvidas-frequentes/"><li>Dúvidas mais frequentes</li></a>
                         </ul>
                     </div>
                 </div>
