--- a/index.html
+++ b/index.html
@@ -227,6 +227,38 @@
         </div>
     </section>
 
+            <section class="feedbacks-section">
+                <br><br>
+            <h1 class="section-title">O que nossos alunos dizem</h1>
+            <p class="section-subtitle">Todas as informações e avaliações foram retiradas do Google Avaliações.</p>
+            
+            <div class="feedbacks-container">
+
+                <div class="feedback feedback-left">
+                    <div class="feedback-card">
+                        <p class="feedback-message"><em>"Fiz o curso de Administração, escola maravilhosa com professores ótimos !!
+                            Local muito bom com ponto de ônibus próximo, super acessível. Recomendo !!"</em></p>
+                        <p class="feedback-author">— Adriana Santos</p>
+                    </div>
+                </div>
+
+                <div class="feedback feedback-right">
+                    <div class="feedback-card">
+                        <p class="feedback-message"><em>"A Etec é muito bem equipada, ótima equipe de limpeza, empresa de alimentos muito capacitada, bons armários, ambiente do refeitório acolhedor e equipado, sala de palestras, possui vários laboratórios de informática, laboratórios de eletrônica, laboratórios de farmácia com diferentes equipamentos, praça para os alunos conviverem, sala interativa, salas de aula com televisão, cantina, biblioteca, organização excelente, atendimento de qualidade e funcionários muito bem capacitados."</em></p>
+                        <p class="feedback-author">— Emily Ferreira</p>
+                    </div>
+                </div>
+
+                <div class="feedback feedback-left">
+                    <div class="feedback-card">
+                        <p class="feedback-message"><em>"Excelente ambiente, com ensino de qualidade, profissionais extremamente capacitados, cursos de diversas áreas e com ótima estrutura para a demanda."</em></p>
+                        <p class="feedback-author">— Beatriz Silva</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
