feat: att index text

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-left">
-                    <h1>Participe já do vestibulinho!</h1>
-                    <p class="hero-subtitle">Inscrições abertas até 3 de novembro de 2025!</p>
+                    <h1>Você já conhece nosso vestibulinho?</h1>
+                    <p class="hero-subtitle">Acesse o formulário abaixo e nos conte mais! Mas não perca tempo, as inscrições ficarão abertas até 3 de novembro de 2025!</p>
                     <p class="hero-description">"O principal objetivo da educação é criar pessoas capazes de fazer
                         coisas novas e não simplesmente repetir o que outras gerações fizeram." - Jean Piaget</p>
-                    <a href="https://vestibulinho.etec.sp.gov.br/home/" target="_blank"><button class="cta-button">Faça sua inscrição</button></a>
+                    <a href="#" target="_blank"><button class="cta-button">Formulário</button></a>
                 </div>
                 <div class="hero-right">
                     <div class="logo-container">
@@ -34,8 +34,10 @@
                 </div>
             </div>
             <div class="social-icons">
-                <a href="https://www.facebook.com/etechemeritas/?locale=pt_BR" target="_blank"><img src="img/iconfacebook.svg" alt="facebook"></a>
-                <a href="https://www.instagram.com/etecabh/" target="_blank"><img src="img/iconinstagram.svg" alt="instagram"></a>
+                <a href="https://www.facebook.com/etechemeritas/?locale=pt_BR" target="_blank"><img
+                        src="img/iconfacebook.svg" alt="facebook"></a>
+                <a href="https://www.instagram.com/etecabh/" target="_blank"><img src="img/iconinstagram.svg"
+                        alt="instagram"></a>
             </div>
         </div>
     </section>
@@ -74,19 +76,19 @@
                 </div>
                 <div class="course-card">
                     <a href="https://www.cps.sp.gov.br/cursos-etec/desenvolvimento-de-sistemas/" target="_blank">
-                    <div class="course-image">
-                        <img src="img/cursos/ds.jpeg">
-                    </div>
-                    <button class="course-button">Saiba Mais</button>
-                </a>
+                        <div class="course-image">
+                            <img src="img/cursos/ds.jpeg">
+                        </div>
+                        <button class="course-button">Saiba Mais</button>
+                    </a>
                 </div>
                 <div class="course-card">
                     <a href="https://www.cps.sp.gov.br/cursos-etec/eletroeletronica/" target="_blank">
-                    <div class="course-image">
-                        <img src="img/cursos/eletroeletronica.jpeg">
-                    </div>
-                    <button class="course-button">Saiba Mais</button>
-                </a>
+                        <div class="course-image">
+                            <img src="img/cursos/eletroeletronica.jpeg">
+                        </div>
+                        <button class="course-button">Saiba Mais</button>
+                    </a>
                 </div>
                 <div class="course-card">
                     <a href="https://www.cps.sp.gov.br/cursos-etec/eletronica/" target="_blank">
@@ -98,74 +100,76 @@
                 </div>
                 <div class="course-card">
                     <a href="https://www.cps.sp.gov.br/cursos-etec/farmacia/" target="_blank">
-                    <div class="course-image">
-                        <img src="img/cursos/farmacia.jpeg">
-                    </div>
-                    <button class="course-button">Saiba Mais</button>
+                        <div class="course-image">
+                            <img src="img/cursos/farmacia.jpeg">
+                        </div>
+                        <button class="course-button">Saiba Mais</button>
                     </a>
                 </div>
                 <div class="course-card">
                     <a href="https://www.cps.sp.gov.br/cursos-etec/informatica-para-internet/" target="_blank">
-                    <div class="course-image">
-                       <img src="img/cursos/info.jpeg">
-                    </div>
-                    <button class="course-button">Saiba Mais</button>
+                        <div class="course-image">
+                            <img src="img/cursos/info.jpeg">
+                        </div>
+                        <button class="course-button">Saiba Mais</button>
                     </a>
                 </div>
                 <div class="course-card">
                     <a href="https://www.cps.sp.gov.br/cursos-etec/marketing/" target="_blank">
-                    <div class="course-image">
-                        <img src="img/cursos/mkt.jpeg">
-                    </div>
-                    <button class="course-button">Saiba Mais</button>
+                        <div class="course-image">
+                            <img src="img/cursos/mkt.jpeg">
+                        </div>
+                        <button class="course-button">Saiba Mais</button>
                     </a>
                 </div>
                 <div class="course-card">
                     <a href="https://www.cps.sp.gov.br/cursos-etec/programacao-de-jogos-digitais/" target="_blank">
-                    <div class="course-image">
-                        <img src="img/cursos/jogos.jpeg">
-                    </div>
-                    <button class="course-button">Saiba Mais</button>
+                        <div class="course-image">
+                            <img src="img/cursos/jogos.jpeg">
+                        </div>
+                        <button class="course-button">Saiba Mais</button>
                     </a>
                 </div>
                 <div class="course-card">
                     <a href="https://www.cps.sp.gov.br/cursos-etec/recursos-humanos/" target="_blank">
-                    <div class="course-image">
-                        <img src="img/cursos/rh.jpeg">
-                    </div>
-                    <button class="course-button">Saiba Mais</button>
-                </a>
+                        <div class="course-image">
+                            <img src="img/cursos/rh.jpeg">
+                        </div>
+                        <button class="course-button">Saiba Mais</button>
+                    </a>
                 </div>
 
             </div>
         </div>
     </section>
 
-    <section class="structure-section">
-        <div class="container">
-            <div class="structure-content">
-                <h2>Estrutura Única Especial.</h2>
-                <p>Nossa ETEC é conhecida principalmente pela sua estrutura única</p>
-                <a href="https://youtu.be/DMuL4gDY1mk?si=PlNTY3Jc1hb7GA9q" target="_blank"><button class="structure-button">Conheça nossa ETEC</button></a>
-            </div>
-        </div>
-    </section>
 
-    <section class="professor-section"> 
+    <section class="structure-section"> 
+        <div class="structure-content">
+            <h2>Estrutura Única Especial.</h2>
+            <p>Nossa ETEC é conhecida principalmente pela sua estrutura única</p>
+            <a href="https://youtu.be/DMuL4gDY1mk?si=PlNTY3Jc1hb7GA9q" target="_blank"><button
+                class="structure-button">Conheça nossa ETEC</button></a>
+            </div>
+        </section>
+    <section class="professor-section">
         <div class="container">
-            
+            <h1>Conheça nossos professores!</h1>
+
             <div class="professor-slider">
                 <div class="professor-slides">
                     <div class="professor-slide active">
                         <div class="professor-content">
                             <div class="professor-image">
-                                <img src="img/professores/valter.png" alt="" class="imgprof">   
+                                <img src="img/professores/valter.png" alt="" class="imgprof">
                             </div>
                             <div class="professor-info">
                                 <div class="professor-card">
                                     <h3>Professor Valter</h3>
                                     <p class="professor-title">Professor e Coordenador de Informática</p>
-                                    <p class="professor-description">Graduado em análise e desenvolvimento de sistemas, consta com uma pós graduações em programação web e jogos digitais. Atualmente realiza um mestrado na área da educação.</p>
+                                    <p class="professor-description">Graduado em análise e desenvolvimento de sistemas,
+                                        consta com uma pós graduações em programação web e jogos digitais. Atualmente
+                                        realiza um mestrado na área da educação.</p>
                                 </div>
                             </div>
                         </div>
@@ -179,7 +183,8 @@
                                 <div class="professor-card">
                                     <h3>Professora Bete</h3>
                                     <p class="professor-title">Professora e Coordenadora de Marketing</p>
-                                    <p class="professor-description">Formada em Propaganda e Marketing, com pós graduação em Comunicação Publicitária e com um vasto conhecimento no 
+                                    <p class="professor-description">Formada em Propaganda e Marketing, com pós
+                                        graduação em Comunicação Publicitária e com um vasto conhecimento no
                                         mercado de comunicação.
                                     </p>
                                 </div>
@@ -195,7 +200,8 @@
                                 <div class="professor-card">
                                     <h3>Professor Getúlio</h3>
                                     <p class="professor-title">Professor e Coordenador de Eletrônica</p>
-                                    <p class="professor-description">Engenheiro, matemático e pedagogo, com mais de 10 anos na coordenação do curso.</p>
+                                    <p class="professor-description">Engenheiro, matemático e pedagogo, com mais de 10
+                                        anos na coordenação do curso.</p>
                                 </div>
                             </div>
                         </div>
@@ -214,50 +220,81 @@
         </div>
     </section>
 
-    <section class="tips-section">
-        <div class="container">
-            <h2>Manual do Candidato</h2>
-                <div class="tip-card">
-                    <div class="tip-image">
+    <section class="videos-content">
+        <div class="textbox">
+            <h1>Por dentro da ABH!</h1>
+            <p>Conheça um pouco dos trabalhos dos alunos!</p>
+        </div>
 
-                    </div>
-                    <a href= "Manual do Candidato.pdf" download="Manual do Cantidato.pdf"><button class="tip-button">Saiba Mais</button></a>
+            <div class="carrossel">
+                <div class="videos" id="videos">
+                    <video src="img/video1.mp4" controls></video>
+                    <video src="img/video2.mp4" controls></video>
+                    <video src="img/video3.mp4" controls></video>
                 </div>
+
+            </div>
+            <div class="botoes">
+                <button class="active"></button>
+                <button></button>
+                <button></button>
+            </div>
+    </section>
+
+    <section class="feedbacks-section">
+        <br><br>
+        <h1 class="section-title">Ainda não está convencido?</h1>
+        <p class="section-subtitle">Confira o que os alunos dizem sobre nós no Google Avaliações!</p>
+
+        <div class="feedbacks-container">
+
+            <div class="feedback feedback-left">
+                <div class="feedback-card">
+                    <p class="feedback-message"><em>"Fiz o curso de Administração, escola maravilhosa com professores
+                            ótimos !!
+                            Local muito bom com ponto de ônibus próximo, super acessível. Recomendo !!"</em></p>
+                    <p class="feedback-author">— Adriana Santos</p>
+                </div>
+            </div>
+
+            <div class="feedback feedback-right">
+                <div class="feedback-card">
+                    <p class="feedback-message"><em>"A Etec é muito bem equipada, ótima equipe de limpeza, empresa de
+                            alimentos muito capacitada, bons armários, ambiente do refeitório acolhedor e equipado, sala
+                            de palestras, possui vários laboratórios de informática, laboratórios de eletrônica,
+                            laboratórios de farmácia com diferentes equipamentos, praça para os alunos conviverem, sala
+                            interativa, salas de aula com televisão, cantina, biblioteca, organização excelente,
+                            atendimento de qualidade e funcionários muito bem capacitados."</em></p>
+                    <p class="feedback-author">— Emily Ferreira</p>
+                </div>
+            </div>
+
+            <div class="feedback feedback-left">
+                <div class="feedback-card">
+                    <p class="feedback-message"><em>"Excelente ambiente, com ensino de qualidade, profissionais
+                            extremamente capacitados, cursos de diversas áreas e com ótima estrutura para a
+                            demanda."</em></p>
+                    <p class="feedback-author">— Beatriz Silva</p>
+                </div>
+            </div>
 
         </div>
     </section>
 
-            <section class="feedbacks-section">
-                <br><br>
-            <h1 class="section-title">O que nossos alunos dizem</h1>
-            <p class="section-subtitle">Todas as informações e avaliações foram retiradas do Google Avaliações.</p>
-            
-            <div class="feedbacks-container">
+    <section class="tips-section">
+        <div class="container">
+            <h2>Manual do Candidato</h2>
+            <div class="tip-card">
+                <div class="tip-image">
 
-                <div class="feedback feedback-left">
-                    <div class="feedback-card">
-                        <p class="feedback-message"><em>"Fiz o curso de Administração, escola maravilhosa com professores ótimos !!
-                            Local muito bom com ponto de ônibus próximo, super acessível. Recomendo !!"</em></p>
-                        <p class="feedback-author">— Adriana Santos</p>
-                    </div>
                 </div>
-
-                <div class="feedback feedback-right">
-                    <div class="feedback-card">
-                        <p class="feedback-message"><em>"A Etec é muito bem equipada, ótima equipe de limpeza, empresa de alimentos muito capacitada, bons armários, ambiente do refeitório acolhedor e equipado, sala de palestras, possui vários laboratórios de informática, laboratórios de eletrônica, laboratórios de farmácia com diferentes equipamentos, praça para os alunos conviverem, sala interativa, salas de aula com televisão, cantina, biblioteca, organização excelente, atendimento de qualidade e funcionários muito bem capacitados."</em></p>
-                        <p class="feedback-author">— Emily Ferreira</p>
-                    </div>
-                </div>
-
-                <div class="feedback feedback-left">
-                    <div class="feedback-card">
-                        <p class="feedback-message"><em>"Excelente ambiente, com ensino de qualidade, profissionais extremamente capacitados, cursos de diversas áreas e com ótima estrutura para a demanda."</em></p>
-                        <p class="feedback-author">— Beatriz Silva</p>
-                    </div>
-                </div>
-
+                <a href="Manual do Candidato.pdf" download="Manual do Cantidato.pdf"><button
+                        class="tip-button">Baixar</button></a>
             </div>
-        </section>
+
+        </div>
+    </section>
+
 
     <footer class="footer">
         <div class="container">
@@ -274,13 +311,16 @@
                         <p>Endereço: Rua Abilene, 16 - Parque Santo Antônio - São Paulo/SP - 03385-160</p>
                         <p>Horário de Funcionamento: Segunda a Sexta - 8h às 17h</p>
                     </div>
-                    <a href="https://maps.app.goo.gl/ebAnyppTsWdfVycWA" target="_blank"><button class="footer-button">Ver Mapa</button></a>
+                    <a href="https://maps.app.goo.gl/ebAnyppTsWdfVycWA" target="_blank"><button
+                            class="footer-button">Ver Mapa</button></a>
                 </div>
                 <div class="footer-right">
                     <div class="footer-column">
                         <h4>FAQ</h4>
                         <ul>
-                           <a href="https://vestibulinho.etec.sp.gov.br/duvidas-frequentes/"><li>Dúvidas mais frequentes</li></a>
+                            <a href="https://vestibulinho.etec.sp.gov.br/duvidas-frequentes/">
+                                <li>Dúvidas mais frequentes</li>
+                            </a>
                         </ul>
                     </div>
                 </div>
@@ -289,8 +329,6 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="videos.js"></script>
 </body>
-
-
 </html>
-
